# privacy-first-cv-screening

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
app/: config.py  fairness.py  logging_safe.py  main.py  mock.py  models.py  reasons.py  session_store.py
app/extraction/: _pdfium.py  image_only.py  ocr.py  pdf_render.py  pdf_text.py  vlm.py
app/pipeline/: acquire.py  anchors.py  dedup.py  extract.py  ingest.py  injection.py  llm.py  segment.py
app/query/: embeddings.py  engine.py  jd.py  references.py  render.py  scoring.py
app/scoring/: __init__.py  calibration.py  engine.py  judge.py  match.py  report.py  rubric.py  service.py
docs/: api.md  architecture.md  design-decisions.md  evaluation.md  example-output.md  guardrails.md
scripts/: generate_synthetic_data.py
synthetic_data/: README.md
tests/: eval_golden.py  make_fixtures.py  make_golden.py  test_anchors.py  test_api_flow.py  test_async_live.py  test_extract_live.py  test_golden.py  test_health.py  test_layers.py  test_mock_mode.py  test_qh_fixes.py  test_query.py  test_query_live.py  test_safe_logging.py  test_scoring.py  test_synthetic_data.py
